<resources>
    <string name="app_name">onBoard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="start">Начать работу</string>
    <string name="skips">Пропустить</string>
    <string name="registration">Регистрация по номеру</string>
    <string name="code">Ваш код</string>
    <string name="noteApp">Заметки</string>
    <string name="search">Поиск заметок</string>
    <string name="number">Введите номер</string>
    <string name="send">Отправить снова</string>
    <string name="add">Готово</string>
    <string name="time">22:33</string>
    <string name="plus">+</string>
    <string name="get_code">Получить код</string>
    <string name="confirm">Потвердить</string>
</resources>