<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragment.registration.RegistrationFragment">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textColor="#777373"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/noteApp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@id/registration"
        app:layout_constraintEnd_toEndOf="@id/registration"
        app:layout_constraintStart_toStartOf="@id/registration" />

    <EditText
        android:id="@+id/first_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="10dp"
        android:hint="@string/number"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#C3BCBC"
        app:layout_constraintTop_toBottomOf="@id/registration" />

    <EditText
        android:id="@+id/second_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:drawablePadding="10dp"
        android:hint="@string/code"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="#C3BCBC"
        app:layout_constraintTop_toBottomOf="@id/first_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_code"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounder2"
        android:backgroundTint="#F1BA16"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/get_code"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/second_et"
        app:layout_constraintStart_toStartOf="@id/second_et"
        app:layout_constraintTop_toBottomOf="@id/second_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounder2"
        android:backgroundTint="#F1BA16"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/btn_get_code"
        app:layout_constraintStart_toStartOf="@id/btn_get_code"
        app:layout_constraintTop_toBottomOf="@id/btn_get_code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send"
        android:textColor="#F1BA16"
        app:layout_constraintEnd_toEndOf="@id/second_et"
        app:layout_constraintStart_toStartOf="@id/second_et"
        app:layout_constraintTop_toBottomOf="@id/btn_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>